--- a/src/app/Component/auth/signup/signup.component.html
+++ b/src/app/Component/auth/signup/signup.component.html
@@ -7,7 +7,6 @@
         <div class="row justify-content-md-center">
           <h2 class="styleTitle">Créer un compte</h2>
         </div>
-
         <form class="row g-3" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
           <!--<div class="col-md-6">
             <div class="form-group">
@@ -44,7 +43,7 @@
           <div class="form-group">
             <label>Mot de passe</label>
             <input type="password" formControlName="password" class="form-control form-control-sm"
-              [ngClass]="{ 'is-invalid': f.password.errors }" />
+              [ngClass]="{ 'is-invalid': shouldShowPasswordError() }" />
             <div *ngIf="f.password.errors" class="invalid-feedback">
               <div *ngIf="f.password.errors.required">Le mot de passe est requis</div>
               <div *ngIf="f.password.errors.minlength">Le mot de passe doit avoir au moins 6 caractères</div>
@@ -53,7 +52,7 @@
           <div class="form-group">
             <label>Confirmer Mot de passe</label>
             <input type="password" formControlName="confirmPassword" class="form-control form-control-sm"
-              [ngClass]="{ 'is-invalid': f.confirmPassword.errors }" />
+              [ngClass]="{ 'is-invalid': shouldShowConfirmPasswordError() }" />
             <div *ngIf="f.confirmPassword.errors" class="invalid-feedback">
               <div *ngIf="f.confirmPassword.errors.required">La confirmation du mot de passe est requis</div>
               <div *ngIf="f.confirmPassword.errors.mustMatch">Les mots de passe doivent être identique</div>
