--- a/src/app/Component/profil/profil.component.html
+++ b/src/app/Component/profil/profil.component.html
@@ -4,10 +4,23 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <app-user-form option="{{ profil }}"></app-user-form>
+        <div class="row" style="margin-bottom: 2rem;">
+          <div class="col">
+            <app-user-form></app-user-form>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <app-change-password></app-change-password>
+          </div>
+        </div>
       </div>
       <div class="col">
-
+        <div class="row">
+          <div class="col">
+            <app-orderer-list></app-orderer-list>
+          </div>
+        </div>
       </div>
     </div>
   </div>
