Toast Bootstrap OK & Comment Model

--- a/src/app/Component/single-product/single-product.component.html
+++ b/src/app/Component/single-product/single-product.component.html
@@ -55,5 +55,8 @@
         </div>
       </div>
     </div>
+    <div class="row gy-4">
+      <app-comment-list></app-comment-list>
+    </div>
   </div>
 </section><!-- End Portfolio Details Section -->
