Mise en place du PerlerType

--- a/src/app/Shared/Component/header/header.component.html
+++ b/src/app/Shared/Component/header/header.component.html
@@ -26,6 +26,7 @@
               <ul>
                 <li *ngIf="isAuthA"><a routerLink="products" class="nav-link">Produits</a></li>
                 <li *ngIf="isAuthA"><a routerLink="tags" class="nav-link">Tags</a></li>
+                <li *ngIf="isAuthA"><a routerLink="perlerTypes" class="nav-link">Types Perles</a></li>
                 <li *ngIf="isAuthA"><a routerLink="contacts" class="nav-link">Contacts</a></li>
                 <li *ngIf="isAuthA"><a routerLink="users" class="nav-link">Utilisateurs</a></li>
               </ul>
