PerlerType + Logo New

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -189,3 +189,10 @@
     height: 140px;
     width: 140px;
 }
+
+.spanNew {
+  padding: 5px 10px 5px 10px;
+  background-color: #dc3545;
+  color: #fff;
+  border-radius: 20%;
+}
