--- a/src/app/Component/Admin/perlertype-form/perlertype-form.component.html
+++ b/src/app/Component/Admin/perlertype-form/perlertype-form.component.html
@@ -3,7 +3,7 @@
 <app-breadcrumbs *ngIf="!isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Tags" nodeChildUrl="tags"
   nodeChildChild="Modifier"></app-breadcrumbs>
 
-<section class="inner-page">
+<section class="inner-page" style="min-height: 32rem;">
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-sm-6 formStyle">
@@ -15,12 +15,12 @@
           <div class="row">
             <div class="col">
               <div class="form-group form-control-sm">
-                <label for="code">Code</label>
-                <input type="text" id="code" class="form-control" formControlName="code"
-                  [ngClass]="{'is-invalid': shouldShowCodeError()}">
-                <div *ngIf="f.code.errors" class="invalid-feedback">
-                  <div *ngIf="f.code.errors.required">La référence est obligatoire</div>
-                  <div *ngIf="f.code.errors.tagCodeExists">La référence doit être unique</div>
+                <label for="reference">Reference</label>
+                <input type="text" id="reference" class="form-control" formControlName="reference"
+                  [ngClass]="{'is-invalid': shouldShowReferenceError()}">
+                <div *ngIf="f.reference.errors" class="invalid-feedback">
+                  <div *ngIf="f.reference.errors.required">La référence est obligatoire</div>
+                  <div *ngIf="f.reference.errors.perlerTypeRefExists">La référence doit être unique</div>
                 </div>
               </div>
             </div>
@@ -31,6 +31,19 @@
                   [ngClass]="{ 'is-invalid': shouldShowLibelleError() }">
                 <div *ngIf="f.libelle.errors" class="invalid-feedback">
                   <div *ngIf="f.libelle.errors.required">Le libelle est obligatoire</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="form-group form-control-sm">
+                <label for="color">Couleur</label>
+                <input class="form-control" [value]="color"
+                [style.background]="color"
+                [(colorPicker)]="color"
+                formControlName="color"
+                [ngClass]="{ 'is-invalid': shouldShowColorError() }"/>
+                <div *ngIf="f.color.errors" class="invalid-feedback">
+                  <div *ngIf="f.color.errors.required">La couleur est obligatoire</div>
                 </div>
               </div>
             </div>
