--- a/src/app/Component/Admin/perlertype-form/perlertype-form.component.html
+++ b/src/app/Component/Admin/perlertype-form/perlertype-form.component.html
@@ -1,6 +1,6 @@
-<app-breadcrumbs *ngIf="isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Tags" nodeChildUrl="tags"
+<app-breadcrumbs *ngIf="isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Types Perle" nodeChildUrl="perlerTypes"
   nodeChildChild="Créer"></app-breadcrumbs>
-<app-breadcrumbs *ngIf="!isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Tags" nodeChildUrl="tags"
+<app-breadcrumbs *ngIf="!isAddMode" nodeParent="Accueil" nodeParentUrl="home" nodeChild="Types Perle" nodeChildUrl="perlerTypes"
   nodeChildChild="Modifier"></app-breadcrumbs>
 
 <section class="inner-page" style="min-height: 32rem;">
@@ -8,8 +8,8 @@
     <div class="row justify-content-md-center">
       <div class="col-sm-6 formStyle">
         <div class="row justify-content-md-center">
-          <h2 *ngIf="isAddMode" class="styleTitle">Enregistrer un nouveau tag</h2>
-          <h2 *ngIf="!isAddMode" class="styleTitle">Modifier un tag</h2>
+          <h2 *ngIf="isAddMode" class="styleTitle">Enregistrer un nouveau type de perle</h2>
+          <h2 *ngIf="!isAddMode" class="styleTitle">Modifier un type de perle</h2>
         </div>
         <form [formGroup]="perlerTypeForm" (ngSubmit)="onSubmitForm()">
           <div class="row">
@@ -37,9 +37,10 @@
             <div class="col">
               <div class="form-group form-control-sm">
                 <label for="color">Couleur</label>
-                <input class="form-control" [value]="color"
+                <input type="text" id="color" class="form-control" [value]="color"
                 [style.background]="color"
                 [(colorPicker)]="color"
+                (colorPickerChange)="onChangeColor($event)"
                 formControlName="color"
                 [ngClass]="{ 'is-invalid': shouldShowColorError() }"/>
                 <div *ngIf="f.color.errors" class="invalid-feedback">
