--- a/src/app/Component/single-product/single-product.component.html
+++ b/src/app/Component/single-product/single-product.component.html
@@ -50,7 +50,7 @@
                   <span class="half" [style.width.%]="fill">&starf;;</span>&starf;
                 </span>
               </ng-template>
-              <ngb-rating [(rate)]="currentRate" [starTemplate]="t" [readonly]="true" [max]="5"></ngb-rating>
+              <!-- <ngb-rating [(rate)]="currentRate" [starTemplate]="t" [readonly]="true" [max]="5"></ngb-rating> -->
               {{ currentRate }}
         </div>
       </div>
