--- a/src/app/Shared/Component/header/header.component.html
+++ b/src/app/Shared/Component/header/header.component.html
@@ -22,7 +22,7 @@
               <a routerLink="auth/signin" class="nav-link">Connexion</a>
             </li>
             <li *ngIf="isAuth"><a routerLink="profil" class="nav-link" (click)="onProfil(user.key)">Profil</a></li>
-            <li class="dropdown"><a href="#" class="nav-link"><span>Administration</span><i class="bi bi-chevron-right"></i></a>
+            <li *ngIf="isAuthA" class="dropdown"><a href="#" class="nav-link"><span>Administration</span><i class="bi bi-chevron-right"></i></a>
               <ul>
                 <li *ngIf="isAuthA"><a routerLink="products" class="nav-link">Produits</a></li>
                 <li *ngIf="isAuthA"><a routerLink="tags" class="nav-link">Tags</a></li>
