--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* You can add global styles to this file, and also import other style files */
 .is-invalid{
     border: 1px solid #dc3545;
@@ -85,6 +89,7 @@
     border-radius: 50px;
     transition: 0.3s;
     color: rgba(255, 255, 255, 0.5);
+
     width: 54px;
     height: 54px;
     display: flex;
@@ -195,4 +200,9 @@
   background-color: #dc3545;
   color: #fff;
   border-radius: 20%;
+}
+
+p-galleria.welcome .p-galleria-caption {
+  background: transparent !important;
+  margin-bottom: 5rem;
 }
