--- a/src/app/views/section-portfolio/section-portfolio.component.html
+++ b/src/app/views/section-portfolio/section-portfolio.component.html
@@ -10,8 +10,14 @@
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
       <div class="col-lg-12 d-flex justify-content-center">
-        <ul id="portfolio-flters">
+        <ul id="portfolio-filters">
           <li data-filter="*" class="filter-active">Toutes</li>
+          <li 
+            *ngFor="let tag of tags"
+            [attr.data-filter]="'.filter-' + tag.code"
+          >
+            {{ tag.libelle }}
+          </li>
         </ul>
       </div>
     </div>
