--- a/src/app/views/section-welcome/section-welcome.component.html
+++ b/src/app/views/section-welcome/section-welcome.component.html
@@ -1,4 +1,4 @@
-<section id="hero">
+<section id="welcome">
   <div id="heroCarousel" class="carousel slide carousel-fade">  
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
