--- a/src/app/views/section-portfolio/section-portfolio.component.html
+++ b/src/app/views/section-portfolio/section-portfolio.component.html
@@ -4,17 +4,26 @@
   <div class="container" data-aos="fade-up">
 
     <header class="section-header">
-      <h2>Portfolio</h2>
-      <p>Mes dernières pièces</p>
+      <h2 [innerText]="resource.portfolio.title"></h2>
+      <p [innerText]="resource.portfolio.subtitle"></p>
     </header>
 
     <div class="row" data-aos="fade-up" data-aos-delay="100">
       <div class="col-lg-12 d-flex justify-content-center">
         <ul id="portfolio-filters">
-          <li data-filter="*" class="filter-active">Toutes</li>
+          <li 
+            data-filter="*" 
+            [class.filter-active]="activeFilter === '*'"
+            (click)="setActiveFilter('*')"
+            [innerText]="resource.portfolio.all"
+          >
+          </li>
+    
           <li 
             *ngFor="let tag of tags"
             [attr.data-filter]="'.filter-' + tag.code"
+            [class.filter-active]="activeFilter === '.filter-' + tag.code"
+            (click)="setActiveFilter('.filter-' + tag.code)"
           >
             {{ tag.libelle }}
           </li>
@@ -23,7 +32,56 @@
     </div>
 
     <div id="portfolio-container" class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
+      <div 
+        class="col-lg-4 col-md-6 portfolio-item"
+        *ngFor="let product of products"
+        [ngClass]="product.filterClasses"
+      >
+        <div class="portfolio-wrap">
+          <img 
+            [src]="product.pictureUrl" 
+            class="img-fluid" 
+            [alt]="product.content"
+          />
+    
+          <div class="portfolio-info">
+            <div>
+              <span 
+                *ngIf="product.isNew" 
+                class="spanNew"
+                [innerText]="resource.portfolio.new"
+              >
+              </span>
+    
+              <h4 class="mt-[20px]">
+                {{ product.title }}
+              </h4>
+            </div>
+    
+            <p [innerText]="resource.portfolio.measure | format: product.size"></p>
+    
+            <div class="portfolio-links">
+              <a 
+                [href]="product.pictureUrl"
+                class="portfokio-lightbox"
+                data-gallery="portfolioGallery"
+                [title]="product.title"
+              >
+                <i class="bi bi-plus"></i>
+              </a>
+    
+              <a 
+                [routerLink]="resource.portfolio.redirect_product_view | format:product.key"
+                [title]="resource.portfolio.details"
+              >
+                <i class="bi bi-link"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    
 
   </div>
 
